# par_ai_core

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIT-REMEDIATION-PLAN.md  AUDIT-REMEDIATION.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ENHANCEMENTS.md  Makefile  README.md  audit.md  codecov.yaml  codecov.yml  pyproject.toml  pyrightconfig.json  ruff.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  publish-dev.yml  publish.yml  release.yml  reusable-setup.yml
docs/: architecture.md  operations.md
docs/fable/: ENH-001-http-first-fetch.md  ENH-002-browser-pool.md  ENH-003-memoize-model-metadata.md  ENH-004-pricing-cache-ttl.md  ENH-005-native-async-api.md  ENH-006-provider-fallback.md  ENH-007-shared-http-session.md  ENH-008-observability-hooks.md
html/par_ai_core/: index.html  llm_image_utils.html  llm_providers.html  llm_utils.html  output_utils.html  par_logging.html  pricing_lookup.html  provider_cb_info.html  search_utils.html  user_agents.html  utils.html  web_tools.html
src/par_ai_core/: __init__.py  __main__.py  llm_config.py  llm_image_utils.py  llm_providers.py  llm_utils.py  output_utils.py  par_logging.py  pricing_lookup.py  provider_cb_info.py  search_utils.py  time_display.py  user_agents.py  utils.py  web_tools.py
src/par_ai_core/docs/: provider_cb_info.html  web_tools.html
src/par_ai_core/utils/: __init__.py  data.py  files.py  hashing.py  markdown.py  misc.py  shell.py  strings.py  type_checks.py  urls.py
tests/: __init__.py  test_init.py  test_llm_config.py  test_llm_image_utils.py  test_llm_providers.py  test_llm_utils.py  test_main.py  test_output_utils.py  test_par_logging.py  test_pricing_lookup.py  test_provider_cb_info.py  test_search_utils.py  test_time_display.py  test_user_agents.py  test_utils.py  test_web_tools.py
