[project]
name = "par_ai_core"
dynamic = [
    "version",
]
description = "A Python library providing tools, helpers, and LangChain wrappers for building AI-powered applications with multi-provider LLM support"
url = "https://github.com/paulrobello/par_ai_core"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Paul Robello", email = "probello@gmail.com" },
]
maintainers = [
    { name = "Paul Robello", email = "probello@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = [
    "ai",
    "langchain",
    "openai",
    "anthropic",
    "ollama",
    "llamacpp",
]
dependencies = [
    "requests>=2.34.2",
    "rich>=15.0.0",
    "orjson>=3.11.9",
    "strenum>=0.4.15",
    "boto3>=1.43.35",
    "botocore>=1.43.35",
    "langchain-anthropic>=1.4.7",
    "langchain-aws>=1.6.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-experimental>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "langchain-xai>=1.2.2",
    "langchain-mistralai>=1.1.5",
    "langchain-deepseek>=1.1.0",
    "langchain-litellm>=0.7.0",
    "langchain-google-community>=5.0.0",
    "langchain>=1.3.11",
    "langgraph>=1.2.6",
    "pydantic-core>=2.46.4",
    "pydantic>=2.13.4",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
    "selenium>=4.45.0",
    "webdriver-manager>=4.1.2",
    "praw>=8.0.1",
    "tavily-python>=0.7.26",
    "youtube-transcript-api>=1.2.4",
    "beautifulsoup4>=4.15.0",
    "html2text>=2025.4.15",
    "markdownify>=1.2.2",
    "litellm>=1.89.3",
    "nest-asyncio>=1.6.0",
    "openai>=2.43.0",
    "tiktoken>=0.13.0",
]
packages = [
    "src/par_ai_core",
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/paulrobello/par_ai_core"
Documentation = "https://github.com/paulrobello/par_ai_core/blob/main/README.md"
Repository = "https://github.com/paulrobello/par_ai_core"
Issues = "https://github.com/paulrobello/par_ai_core/issues"
Discussions = "https://github.com/paulrobello/par_ai_core/discussions"
Wiki = "https://github.com/paulrobello/par_ai_core/wiki"

[project.scripts]
par_ai_core = "par_ai_core.__main__:main"

[build-system]
requires = [
    "hatchling",
    "wheel",
]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pre-commit>=4.6.0",
    "ruff>=0.15.18",
    "types-orjson>=3.6.2",
    "pyinstrument>=5.1.2",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.4.0",
    "pdoc3>=0.11.6",
    "hatchling>=1.30.1",
    "wheel>=0.47.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src/par_ai_core --cov-report=term-missing"
testpaths = [
    "tests",
]
timeout = 30
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.version]
path = "src/par_ai_core/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [
    "src/par_ai_core",
]
include = [
    "py.typed",
    "**/*.py",
    "**/*.html",
    "**/*.gif",
    "**/*.jpg",
    "**/*.png",
    "**/*.md",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/par_ai_core",
    "LICENSE",
    "README.md",
    "extraction_prompt.md",
    "pyproject.toml",
]
exclude = [
    "*.pyc",
    "__pycache__",
    "*.so",
    "*.dylib",
]
