[project]
name = "par_ai_core"
dynamic = [
    "version",
]
description = "A Python library providing tools, helpers, and LangChain wrappers for building AI-powered applications with multi-provider LLM support"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Paul Robello", email = "probello@gmail.com" },
]
maintainers = [
    { name = "Paul Robello", email = "probello@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = [
    "ai",
    "langchain",
    "openai",
    "anthropic",
    "ollama",
    "llamacpp",
]
dependencies = [
    "requests>=2.34.2",
    "rich>=15.0.0",
    "orjson>=3.11.9",
    "langchain-core>=1.4.8",
    "langchain>=1.3.11",
    "langgraph>=1.2.6",
    "langchain-text-splitters>=1.1.2",
    "pydantic-core>=2.46.4",
    "pydantic>=2.13.4",
    "beautifulsoup4>=4.15.0",
    "markdownify>=1.2.2",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
    "nest-asyncio>=1.6.0",
]

# Optional extras: install only the providers/features you need.
# The lean core (above) lets consumers `pip install par_ai_core` for the
# LangChain wiring without pulling every provider SDK, two browser stacks,
# or litellm. Provider/web/search backends are imported lazily and emit an
# actionable ImportError pointing at the relevant extra when absent.
[project.optional-dependencies]
openai = ["langchain-openai>=1.3.3", "openai>=2.43.0"]
anthropic = ["langchain-anthropic>=1.4.7"]
google = ["langchain-google-genai>=4.2.5", "langchain-google-community>=5.0.0", "google-api-python-client>=2.100.0"]
bedrock = ["langchain-aws>=1.6.0", "boto3>=1.43.35", "botocore>=1.43.35"]
azure = ["langchain-openai>=1.3.3", "openai>=2.43.0"]
groq = ["langchain-groq>=1.1.3"]
xai = ["langchain-xai>=1.2.2"]
mistral = ["langchain-mistralai>=1.1.5"]
deepseek = ["langchain-deepseek>=1.1.0"]
openrouter = ["langchain-openai>=1.3.3", "openai>=2.43.0"]
litellm = ["langchain-litellm>=0.7.0"]
github = ["langchain-openai>=1.3.3", "openai>=2.43.0"]
ollama = ["langchain-ollama>=1.1.0"]
web = [
    "playwright>=1.60.0",
    "selenium>=4.45.0",
    "webdriver-manager>=4.1.2",
    "html2text>=2025.4.15",
]
search = [
    "tavily-python>=0.7.26",
    "praw>=8.0.1",
    "google-api-python-client>=2.100.0",
    "youtube-transcript-api>=1.2.4",
    "langchain-community>=0.4.2",
]
pricing = ["litellm>=1.89.3"]
all = ["par_ai_core[openai,anthropic,google,bedrock,azure,groq,xai,mistral,deepseek,openrouter,litellm,github,ollama,web,search,pricing]"]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/paulrobello/par_ai_core"
Documentation = "https://github.com/paulrobello/par_ai_core/blob/main/README.md"
Repository = "https://github.com/paulrobello/par_ai_core"
Issues = "https://github.com/paulrobello/par_ai_core/issues"
Discussions = "https://github.com/paulrobello/par_ai_core/discussions"
Wiki = "https://github.com/paulrobello/par_ai_core/wiki"

[project.scripts]
par_ai_core = "par_ai_core.__main__:main"

[build-system]
requires = [
    "hatchling",
    "wheel",
]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    # The dev/test environment installs every provider/web/search/pricing
    # backend so the full test suite (provider-matrix, web_tools, search,
    # pricing) resolves. Consumers install only the extras they need.
    "par_ai_core[all]",
    "pyright>=1.1.410",
    "pre-commit>=4.6.0",
    "ruff>=0.15.18",
    "types-orjson>=3.6.2",
    "pyinstrument>=5.1.2",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.4.0",
    "pdoc3>=0.11.6",
    "hatchling>=1.30.1",
    "wheel>=0.47.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src/par_ai_core --cov-report=term-missing"
testpaths = [
    "tests",
]
timeout = 30
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.version]
path = "src/par_ai_core/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [
    "src/par_ai_core",
]
include = [
    "py.typed",
    "**/*.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/par_ai_core",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]
exclude = [
    "*.pyc",
    "__pycache__",
    "*.so",
    "*.dylib",
]
